// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors Error 1`] = `
[HH:mm:ss] Getting Node Package manifest [started]
[HH:mm:ss] Getting Node Package manifest [failed]
[HH:mm:ss] → Invalid comparator: !@#
`;

exports[`errors StandardError 1`] = `
[HH:mm:ss] Getting Node Package manifest [started]
[HH:mm:ss] Getting Node Package manifest [failed]
[HH:mm:ss] → Failed to parse <cwd>/test/__fixtures__/empty-package-json/package.json
`;

exports[`node-basic 1`] = `
[HH:mm:ss] Getting Node Package manifest [started]
[HH:mm:ss] Getting Node Package manifest [completed]
[HH:mm:ss] Bundling Node Package [started]
[HH:mm:ss] Bundling for Node target [started]
[HH:mm:ss] Bundling for Node target [completed]
[HH:mm:ss] Bundling Node Package [completed]
`;

exports[`node-dependencies 1`] = `
[HH:mm:ss] Getting Node Package manifest [started]
[HH:mm:ss] Getting Node Package manifest [completed]
[HH:mm:ss] Bundling Node Package [started]
[HH:mm:ss] Bundling for Node target [started]
[HH:mm:ss] Bundling for Node target [completed]
[HH:mm:ss] Bundling Node Package [completed]
`;

exports[`node-version 1`] = `
[HH:mm:ss] Getting Node Package manifest [started]
[HH:mm:ss] Getting Node Package manifest [completed]
[HH:mm:ss] Bundling Node Package [started]
[HH:mm:ss] Bundling for Node target [started]
[HH:mm:ss] Bundling for Node target [completed]
[HH:mm:ss] Bundling Node Package [completed]
`;
